FA API & compiled css

--- a/common/less/base.less
+++ b/common/less/base.less
@@ -20,7 +20,7 @@ font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, d
 
 @import "functions.less";
 @import "font.less";
-@import "../font-awesome/less/font-awesome.less";
+// @import "../font-awesome/less/font-awesome.less";
 
 // CLEARFIX 
 .clearfix {
